# serializer version: 1
# name: test_code_in_quote_bbcode_header_is_escaped
  '''
  <aside class="quote-block">
  <div class="quote-heading" data-noquote="1">@Us&quot;&gt;&lt;script&gt;alert(&quot;!&quot;)&lt;/script&gt;er</div>
  <blockquote class="quote-body" data-author="@Us&quot;&gt;&lt;script&gt;alert(&quot;!&quot;)&lt;/script&gt;er" data-block="quote">
  <p>Test</p>
  </blockquote>
  </aside>
  '''
# ---
# name: test_code_in_quote_bbcode_is_escaped
  '''
  <aside class="quote-block">
  <div class="quote-heading" data-noquote="1"></div>
  <blockquote class="quote-body" data-block="quote">
  <p>&lt;script&gt;alert(&quot;!&quot;)&lt;/script&gt;</p>
  </blockquote>
  </aside>
  '''
# ---
# name: test_code_in_quote_markdown_is_escaped
  '''
  <blockquote>
  <p>&lt;script&gt;alert(&quot;!&quot;)&lt;/script&gt;</p>
  </blockquote>
  '''
# ---
# name: test_inline_code_is_escaped
  '<p><code>&lt;script&gt;alert(&quot;!&quot;)&lt;/script&gt;</code></p>'
# ---
# name: test_text_is_escaped
  '<p>&lt;script&gt;alert(&quot;!&quot;)&lt;/script&gt;</p>'
# ---
